--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -2,6 +2,10 @@
 body{
     font-family: "Source Sans Pro", "Hiragino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
 }
+p{
+  font-size: 15px;
+}
+
 
 /* ＰＣ用のスタイル */
 @media screen and (min-width:768px) {
@@ -12,10 +16,6 @@ body{
       max-width: 1080px;
       min-width: 960px;
       margin: 0 auto 0 auto;
-  }
-
-  p{
-      font-size: 15px;
   }
 
 
@@ -136,80 +136,108 @@ body{
       margin-top: 50px;
       width: 100%;
   }
-
   /* プロダクト */
-  #product {
-      margin: 80px 0 80px 0;
-      padding: 10px 40px 0px 40px;
-    
-    }
+   #product {
+    background-color: #fafafa;
+    margin: 80px 0 80px 0;
+    padding: 10px 40px 0px 40px;
+  }
+   /* 外枠 */
+   #product > div {
+    margin-top: 40px;
+    display: flex;
+  }
+  
+  /* 左のカラム */
+  #product-left {
+    width: 50%;
+    margin-right: 20px;
+  }
+  
+  /* 右のカラム */
+  #product-right {
+    width: 50%;
+    margin-left: 20px;
+    margin-top: 80px;
+  }
+  
+  /* 画像＋説明の枠 */
+  #product-left > div {
+    position: relative;
+    height: 480px;
+    margin-right: 20px;
+  }
+  #product-right > div {
+    position: relative;
+    height: 480px;
+    margin-left: 20px;
+  }
 
-
-
-       /* 画像＋説明の枠 */
-   #product-left > div,
-   #product-right > div {
-     position: relative;
-     height: 540px;
-   }
- 
-   /* 説明文の枠 */
-   .product-explain {
-     background-color: #ffffff;
-     position: absolute;
-     left: 0;
-     bottom: 50px;
-     padding: 20px;
-     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
-   }
- 
-   .product-explain > span {
-     color: #2710d5;
-     font-weight: bold;
-     font-size: 16px;
-     margin: 0px;
-   }
- 
-   .product-explain > h3 {
-     margin: 10px 0 10px 0;
-   }
-
-   /* 画像 */
+  /* 画像 */
   .product-photo{
     width: 100%;
   }
 
-  #product-more > img { 
-    margin: 0 0 -42px 20px;
-  }
+    /* 説明文の枠 */
+    .product-explain {
+        background-color: #ffffff;
+        position: absolute;
+        left: 0;
+        top: 280px;
+        margin: 0 40px 0 40px;
+        padding: 20px;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+      }
+      
+      /* 説明文の英語 */
+      .product-explain > span {
+        color: #2710d5;
+        font-weight: bold;
+        font-size: 16px;
+        margin: 0;
+      }
+      
+      /* 説明文の見出し */
+      .product-explain > h3 {
+        font-size: 20px;
+        margin: 5px 0 5px 0;
+      }
+      
+      /* 説明文 */
+      .product-explain > p {
+        font-size: 14px;
+        margin: 0;
+      }
+      
+      /* 「もっとみる」ボタン */
+      #product-more {
+        margin: 0 auto -42px auto;
+      }
 
-    /* ABOUT US */
-    #aboutus {
-      margin: 80px 20px 80px 20px;
+     /* ABOUT US  */
+     #aboutus{
+      margin: 0 auto -42px auto,
     }
-  
-    #aboutus > div {
+
+    /* 3つの組織文化と画像を入れる枠 */
+    #aboutus > div{
       display: flex;
-      flex-direction: column;
     }
-  
+    /* 画像 */
+    .culture-img{
+      width: 100%;
+      align-self: flex-start;
+    }
+
+    .culture-img2{
+      margin-top: 50px;
+      width: 100%;
+    }
+    
     .culture-table {
       width: 100%;
       padding-right: 20px;
       order: 2;
-    }
-    .culture-img {
-      width: 100%;
-      order: 1;
-    }
-  
-    .culture-img2 {
-      width: 100%;
-    }
-
-    .culture-num {
-      font-size: 80px;
-      color: #2710d5;
     }
   
     .culture-en {
@@ -229,98 +257,10 @@ body{
 
 
     
-    /* 外枠 */
-    #product > div {
-      margin-top: 40px;
-      display: flex;
-    }
-    
-    /* 左のカラム */
-    #product-left {
-      width: 50%;
-      margin-right: 20px;
-    }
-    
-    /* 右のカラム */
-    #product-right {
-      width: 50%;
-      margin-left: 20px;
-      margin-top: 80px;
-    }
-    
-    /* 画像＋説明の枠 */
-    #product-left > div {
-      position: relative;
-      height: 480px;
-      margin-right: 20px;
-    }
-    #product-right > div {
-      position: relative;
-      height: 480px;
-      margin-left: 20px;
-    }
-
-    /* 画像 */
-    .product-photo{
-      width: 100%;
-    }
-
-      /* 説明文の枠 */
-      .product-explain {
-          background-color: #ffffff;
-          position: absolute;
-          left: 0;
-          top: 280px;
-          margin: 0 40px 0 40px;
-          padding: 20px;
-          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
-        }
+   
         
-        /* 説明文の英語 */
-        .product-explain > span {
-          color: #2710d5;
-          font-weight: bold;
-          font-size: 16px;
-          margin: 0;
-        }
-        
-        /* 説明文の見出し */
-        .product-explain > h3 {
-          font-size: 20px;
-          margin: 5px 0 5px 0;
-        }
-        
-        /* 説明文 */
-        .product-explain > p {
-          font-size: 14px;
-          margin: 0;
-        }
-        
-        /* 「もっとみる」ボタン */
-        #product-more {
-          margin: 0 auto -42px auto;
-        }
-        
-        /* ABOUT US  */
-        #aboutus{
-          margin: 0 auto -42px auto,
-        }
-
-        /* 3つの組織文化と画像を入れる枠 */
-        #aboutus > div{
-          display: flex;
-        }
-
-        /* 画像 */
-      .culture-img{
-        width: 100%;
-        align-self: flex-start;
-      }
-
-      .culture-img2{
-        margin-top: 50px;
-        width: 100%;
-      }
+       
+      
       /* 3つの組織文化の表 */
       .culture-table{
       margin-right: 50px;
