--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -233,27 +233,26 @@ p{
       margin-top: 50px;
       width: 100%;
     }
-    
-    .culture-table {
-      width: 100%;
-      padding-right: 20px;
-      order: 2;
-    }
+
+      /* 組織文化英語 */
+  .culture-en {
+    color: #2710d5;
+    font-weight: bold;
+    font-size: 24px;
+    display: block;
+  }
   
-    .culture-en {
-      color: #2710d5;
-      font-weight: bold;
-      font-size: 24px;
-      display: block;
-    }
+  /* 組織文化日本語 */
+  .culture-jp {
+    font-size: 28px;
+    font-weight: bold;
+  }
   
-    .culture-jp {
-      display: block;
-    }
-  
-    .culture-description {
-      margin: 0;
-    }
+  /* 説明文 */
+  .culture-description {
+    margin: 0;
+  }
+
 
 
     
@@ -376,6 +375,12 @@ p{
           border-top-style: solid;
         }
 
+      #comany > iframe {
+        width: 100%;
+        height: 368px;
+        margin-top: 40px;
+      }  
+
       /* お問い合わせ */
       #contact {
         margin: 80px auto 80px auto;
@@ -478,10 +483,13 @@ p{
     text-decoration: underline;
     }
   
-  #footer-link > a:hover {
-    #footer-link > a:active {
-      color: #ce2222;
-    }
+  #footer-link > a:hover{
+    color: #ffffff;
+    text-decoration: underline;
+  }
+#footer-link > a:active{
+  color: #ffffff;
+}
 
     #sns-footer{
       text-align: left;
@@ -536,102 +544,59 @@ p{
       left: 100px;
       font-size: 16px;
     }
+    #mission-s2dgs {
+      width: 100%;
+      margin: 20px;
+    }
+  
+    .mission-h2 {
+      color: #2710d5;
+      font-size: 40px;
+    }
+  
+    .mission-h2::after {
+      content: none;
+    }
+    #mission-5goals {
+      margin: 20px;
+      display: flex;
+    }
+  
+    #mission-5goals > div {
+      flex-grow: 1;
+      padding: 20px;
+    }
+  
+    #mission-5goals > div > div {
+      margin-bottom: 40px;
+    }
+  
+    .fivegoals-image-right {
+      float: right;
+      margin: 20px;
+    }
+  
+    .fivegoals-image-left {
+      float: left;
+      margin: 20px;
+    }
+  
+    .fivegoals-number {
+      color: #2710d5;
+      font-size: 48px;
+      margin: 0;
+    }
+  
+    .fivegoals-h3 {
+      font-size: 28px;
+      margin: 0;
+    }
+  
+    .fivegoals-p {
+      margin: 0;
+    }
 
-
-   /* プロダクトページ */
-   #product-main {
-    height: 496px;
-    width: 100%;
-    background-image: url("images/product/product-main.png");
-    background-repeat: no-repeat;
-    background-position-y: center;
-  }
-
-  #product-title {
-    background-color: #2710d5;
-    width: 368px;
-    color: #ffffff;
-    height: 496px;
-    border-radius: 0 248px 248px 0;
-    position: relative;
-  }
-  #product-title > h1 {
-    position: absolute;
-    top: 0;
-    left: 100px;
-    font-size: 80px;
-  }
-
-  #product-title > span {
-    position: absolute;
-    top: 200px;
-    left: 100px;
-    font-size: 26px;
-  }
-
-  #product-title > div {
-    position: absolute;
-    top: 350px;
-    left: 100px;
-    font-size: 16px;
-  }  
-   /* セクション1 */
-   .product-section1 {
-    position: relative;
-    margin: 20px;
-    height: 340px;
-  }
-
-  .product-section1 > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 450px;
-    margin: 0 40px 30px 0;
-    border-radius: 0 432px 0 0;
-  }
-
-  .product-section1 > div {
-    position: absolute;
-    top: 0;
-    left: 480px;
-  }
-
-  /* セクション2 */
-  .product-section2 {
-    position: relative;
-    margin: 20px;
-    height: 340px;
-  }
-
-  .product-section2 > img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 450px;
-    margin: 0 0 30px 40px;
-    border-radius: 432px 0 0 0;
-  }
-
-  .product-section2 > div {
-    width: 500px;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-
-  .product-h2 {
-    color: #2710d5;
-    font-size: 24px;
-    margin: 0;
-  }
-
-  .product-h3 {
-    font-size: 28px;
-    margin: 0;
-  }
-}
-
+ 
 /* スマートフォン用のスタイル */
 @media screen and (max-width:767px) {
   body{
@@ -1074,8 +1039,196 @@ p{
     font-size: 28px;
     margin: 0;
   }
+   
+
+
+   /* プロダクトページ */
+   #product-main {
+    height: 496px;
+    width: 100%;
+    background-image: url("images/product/product-main.png");
+    background-repeat: no-repeat;
+    background-position-y: center;
+  }
+
+  #product-title {
+    background-color: #2710d5;
+    width: 368px;
+    color: #ffffff;
+    height: 496px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+  #product-title > h1 {
+    position: absolute;
+    top: 0;
+    left: 100px;
+    font-size: 80px;
+  }
+
+  #product-title > span {
+    position: absolute;
+    top: 200px;
+    left: 100px;
+    font-size: 26px;
+  }
+
+  #product-title > div {
+    position: absolute;
+    top: 350px;
+    left: 100px;
+    font-size: 16px;
+  }  
+   /* セクション1 */
+   .product-section1 {
+    position: relative;
+    margin: 20px;
+    height: 340px;
+  }
+
+  .product-section1 > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 450px;
+    margin: 0 40px 30px 0;
+    border-radius: 0 432px 0 0;
+  }
+
+  .product-section1 > div {
+    position: absolute;
+    top: 0;
+    left: 480px;
+  }
+
+  /* セクション2 */
+  .product-section2 {
+    position: relative;
+    margin: 20px;
+    height: 340px;
+  }
+
+  .product-section2 > img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 450px;
+    margin: 0 0 30px 40px;
+    border-radius: 432px 0 0 0;
+  }
+
+  .product-section2 > div {
+    width: 500px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .product-h2 {
+    color: #2710d5;
+    font-size: 24px;
+    margin: 0;
+  }
+
+  .product-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+    /* mission.html用スタイル */
+   /* ミッションのメインビジュアル */
+   #mission-main {
+    height: 256px;
+    width: 100%;
+    background-image: url("images/mission/mission-main.png");
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-size: auto 208px;
+  }
+
+  #mission-title {
+    background-color: #2710d5;
+    width: 136px;
+    color: #ffffff;
+    height: 256px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+  #mission-title > h1 {
+    position: absolute;
+    top: 0;
+    left: 20px;
+    font-size: 40px;
+  }
+
+  #mission-title > span {
+    position: absolute;
+    top: 110px;
+    left: 20px;
+    font-size: 18px;
+  }
+
+  #mission-title > div {
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    font-size: 13px;
+  }
+   /* ミッションページ　S2DGSの設定 */
+   #mission-s2dgs {
+    margin: 20px;
+  }
+
+  .mission-h2 {
+    color: #2710d5;
+    font-size: 38px;
+    margin: 0px;
+  }
+
+  .mission-h2::after {
+    content: none;
+  }
+
+  #mission-s2dgs > img {
+    width: 100%;
+  }
+   /* ミッションページ　5Goalsの設定 */
+   #mission-5goals {
+    margin: 20px;
+  }
+
+  #mission-5goals > div > div {
+    margin-bottom: 40px;
+  }
+
+  #s2dgs-image {
+    width: 100%;
+  }
+  .fivegoals-image-right {
+    margin: 20px auto 20px auto;
+    display: block;
+  }
+
+  .fivegoals-image-left {
+    margin: 20px auto 20px auto;
+    display: block;
+  }
+
+  .fivegoals-number {
+    color: #2710d5;
+    font-size: 48px;
+    margin: 0;
+  }
+
+  .fivegoals-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+  .fivegoals-p {
+    margin: 0;
+  }
+}
 
 
   }
 
-  }
+  
